--- a/style.css
+++ b/style.css
@@ -151,12 +151,31 @@ th {
   justify-content: space-around;
 }
 
+.bubble {
+  background-color: #0f0f14;
+  border-radius: 50%;
+  height: 1em;
+  width: 1em;
+  min-width: 1em;
+  margin-left: 1em;
+}
+
 .class-head {
   color: #edf2f4;
   background-color: #ef233c !important;
   border-top: #0f0f14 1px solid;
   font-size: 1.2em;
   font-weight: 600;
+}
+
+.def-div {
+  border: #e70329 1px solid;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 40%;
+  margin: 0.5em auto;
+  border-radius: 5px;
 }
 
 .die-roll {
@@ -177,6 +196,13 @@ th {
   padding: 1em;
   border-radius: 10px;
   margin-top: 0;
+}
+
+.info-box {
+  border: #0f0f14 5px solid;
+  width: 45%;
+  margin: auto;
+  padding: 0 !important;
 }
 
 .low-roll {
@@ -224,13 +250,16 @@ th {
   flex-direction: column;
   align-items: center;
   width: 40%;
-  height: 100%;
+  height: 25vh;
+  max-height: 200px;
+  max-width: 300px;
   padding: 1.2em;
   border: 2px #edf2f4 solid;
   background-color: #22232e;
   border-radius: 5px;
   justify-content: space-between;
-  margin: auto;
+  margin: 1em auto;
+  text-align: center;
 }
 
 .roll-container {
@@ -238,6 +267,10 @@ th {
   width: 85%;
   height: 12%;
   margin: auto;
+}
+
+.saving-throw-name {
+  margin-left: 1em;
 }
 
 .section-div {
@@ -248,15 +281,7 @@ th {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-
-.bubble {
-  background-color: #0f0f14;
-  border-radius: 50%;
-  height: 1em;
-  width: 1em;
-  min-width: 1em;
-  margin-left: 1em;
+  min-height: 100vh;
 }
 
 .selected {
@@ -278,10 +303,6 @@ th {
   text-align: right;
   flex-grow: 1;
   margin: 0 1.5em;
-}
-
-.saving-throw-name {
-  margin-left: 1em;
 }
 
 .skill-name,
@@ -307,29 +328,6 @@ th {
   height: auto;
   margin: auto;
 }
-.stat-box p:first-child {
-  font-size: 1em;
-  color: #edf2f4 !important;
-}
-
-.stat-box p:nth-child(2) {
-  border: #0f0f14 3px solid;
-  border-radius: 5px;
-  font-size: 2em;
-  margin: 0.2em auto;
-  background-color: #edf2f4;
-  width: 55%;
-  padding: 0.3em;
-}
-
-.stat-box p:nth-child(3) {
-  border: #0f0f14 3px solid;
-  background-color: #edf2f4;
-  border-radius: 50%;
-  width: 1.5em;
-  padding: 0.2em;
-  margin: auto;
-}
 
 .top-left {
   border-radius: 10px 0 0 0;
@@ -351,6 +349,14 @@ th {
   font-weight: bold;
   border-radius: 5px;
   border: #d5dadd 5px outset;
+}
+
+.scroll-box {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 70%;
+  width: 90%;
+  margin: auto;
 }
 
 /*****Combos*****/
@@ -393,6 +399,99 @@ th {
   margin: 0.2em 1.2em;
 }
 
+#display-wrapper div p {
+  color: #0f0f14;
+}
+#display-wrapper div div {
+  padding: 0.2em;
+}
+
+.info-box > div:first-child,
+#sheet-name-div > div:first-child {
+  text-align: center;
+  border-bottom: #0f0f14 1px solid;
+  background-color: #edf2f4;
+  padding: 0.5em;
+}
+
+.info-box > div:nth-child(2),
+#sheet-name-div > div:nth-child(2) {
+  text-align: center;
+  padding: 0.5em;
+  border-bottom: #0f0f14 1px solid;
+  background-color: #c2c4c7;
+}
+
+#display-wrapper h3 {
+  color: #edf2f4;
+  background-color: #e70329;
+  text-align: center;
+  border-radius: 8px 8px 0 0;
+  margin: 0;
+  padding: 0.2em 0;
+  width: 100%;
+}
+
+.stat-box p:first-child {
+  font-size: 1em;
+  color: #edf2f4 !important;
+}
+
+.stat-box p:nth-child(2) {
+  border: #0f0f14 3px solid;
+  border-radius: 5px;
+  font-size: 2em;
+  margin: 0.2em auto;
+  background-color: #edf2f4;
+  width: 55%;
+  padding: 0.3em;
+}
+
+.stat-box p:nth-child(3) {
+  border: #0f0f14 3px solid;
+  background-color: #edf2f4;
+  border-radius: 50%;
+  width: 1.5em;
+  padding: 0.2em;
+  margin: auto;
+}
+
+.def-div div:first-child {
+  font-weight: 600;
+}
+
+.def-div div:nth-child(2) {
+  border: 1px #0f0f14 solid;
+  width: 70%;
+  height: 50%;
+  margin: auto;
+  vertical-align: middle;
+}
+
+#passive > div {
+  border: #e70329 1px solid;
+  border-radius: 5px;
+  margin: 0.3em auto;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+
+#passive > div > div:nth-child(2) {
+  color: #edf2f4;
+  background-color: #ef233c;
+  border-radius: 50%;
+  width: 1em;
+  height: 1em;
+  text-align: center;
+  border: #0f0f14 1px solid;
+}
+
+#sheet-traits p,
+#sheet-other-profs p {
+  margin: 1em;
+}
+
 /*****IDs*****/
 #class-container,
 #race-container,
@@ -404,30 +503,170 @@ th {
   width: 85%;
 }
 
+#display-head-left {
+  grid-area: headOne;
+  background: url(/images/vecteezy_chinese-dragon-png-ai-generative_24500717_123.png);
+  background-size: 15em 15em;
+  background-repeat: no-repeat;
+  background-color: #ef233c;
+  background-position: 2% 50%;
+  border: #0f0f14 3px solid;
+  border-right: none;
+  border-radius: 10px 0 0 10px;
+  width: 100%;
+  margin: 0;
+  margin-left: 0.5em;
+}
+
+#display-head-right {
+  grid-area: headTwo;
+  width: 100%;
+  border: #0f0f14 3px solid;
+  border-left: none;
+  border-radius: 0 10px 10px 0;
+  display: flex;
+  background-color: #ef233c;
+  flex-wrap: wrap;
+  margin: 0;
+  margin-left: -0.5em;
+}
+
+#display-section {
+  display: flex;
+  flex-wrap: wrap;
+  height: auto;
+}
+
+#display-wrapper {
+  display: grid;
+  width: 85%;
+  border: #0f0f14 3px solid;
+  border-radius: 5px;
+  grid-template-areas:
+    "headOne   headOne   headTwo    headTwo"
+    "stats     stats     stats      stats"
+    "def       skills    otherStats otherStats"
+    "saving    skills    profs      traits"
+    "passive   skills    profs      traits";
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 1em;
+  padding: 1em;
+  background-color: #b3b3b4;
+}
+
+#logo {
+  color: #edf2f4;
+  text-align: right;
+  margin-right: 1em;
+}
+
 #name-button {
   width: 20%;
 }
 
 #name-input-div {
-  width: 65%;
+  width: 75%;
   max-width: 600px;
+}
+
+#other-stats {
+  grid-area: otherStats;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  background-color: #ef233c;
+  border: #0f0f14 3px solid;
+  border-radius: 10px;
 }
 
 #rolling-container {
   display: flex;
   flex-wrap: wrap;
   width: 85%;
+  height: 75%;
   align-items: center;
   margin: 2em auto;
+  justify-content: space-around;
+}
+
+#passive {
+  grid-area: passive;
+}
+
+#sheet-defense {
+  grid-area: def;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#sheet-name-div {
+  border: #0f0f14 5px solid;
+  width: 45%;
+  margin: auto 1em 1em auto;
+  padding: 0 !important;
+}
+
+#sheet-other-profs {
+  grid-area: profs;
+}
+
+#sheet-saving-throws {
+  grid-area: saving;
+}
+
+#sheet-skills {
+  grid-area: skills;
 }
 
 #sheet-stats {
-  display: flex;
-}
-
-#display-section {
+  grid-area: stats;
   display: flex;
   flex-wrap: wrap;
+}
+
+#sheet-traits {
+  grid-area: traits;
+}
+
+#passive,
+#sheet-defense,
+#sheet-skills,
+#sheet-traits,
+#sheet-other-profs,
+#sheet-saving-throws {
+  border: #0f0f14 3px solid;
+  border-radius: 10px;
+  background-color: #edf2f4;
+}
+
+#speed-div,
+#init-div,
+#sheet-prof-bonus-div {
+  border-radius: 10px;
+  background-color: #0f0f14;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
+  width: 30%;
+  height: 80%;
+  margin: auto;
+  align-self: auto;
+  color: #edf2f4;
+}
+
+#sheet-prof-bonus,
+#speed-mod,
+#init-mod {
+  border: #0f0f14 3px solid;
+  border-radius: 5px;
+  color: #0f0f14;
+  background-color: #edf2f4;
+  width: 55%;
+  height: 50%;
+  align-items: center;
+  margin: auto;
+  font-size: 1.2em;
 }
 
 /*****Colors*****/
@@ -493,242 +732,155 @@ th {
   display: none !important;
 }
 
-#display-wrapper div p {
-  color: #0f0f14;
-}
-#display-wrapper div div {
-  padding: 0.2em;
+/*****Media*****/
+@media (max-width: 1200px) {
+  #display-wrapper {
+    width: 95%;
+    grid-template-areas:
+      "headOne   headTwo     headTwo"
+      "stats     stats       stats"
+      "otherStats    otherStats  def"
+      "skills    passive     saving"
+      "skills    profs       traits";
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  #logo {
+    font-size: 2em;
+  }
 }
 
-#display-section {
-  height: auto;
+@media (max-width: 900px) {
+  #display-wrapper {
+    grid-template-areas:
+      "headOne     headTwo"
+      "stats     stats"
+      "otherStats    otherStats"
+      "skills    def"
+      "skills    saving"
+      "skills    passive"
+      "profs traits";
+    grid-template-columns: 1fr 1fr;
+  }
+  .stat-box {
+    border-radius: 10px;
+    width: 28%;
+    margin: 0.5em auto;
+  }
+
+  #speed-div,
+  #init-div,
+  #sheet-prof-bonus-div {
+    width: 25%;
+  }
+
+  #sheet-prof-bonus p,
+  #speed-mod p,
+  #init-mod p {
+    padding: 0;
+    line-height: 0;
+  }
+
+  #sheet-prof-bonus,
+  #speed-mod,
+  #init-mod {
+    height: 40%;
+  }
+
+  #name-input-div {
+    width: 100%;
+  }
+
+  .alignment-div {
+    margin: 0;
+    flex-grow: 1;
+    padding: 0;
+  }
+
+  .proficiency-btn {
+    width: 40%;
+  }
 }
 
-#display-wrapper {
-  display: grid;
-  width: 85%;
-  border: #0f0f14 3px solid;
-  border-radius: 5px;
-  grid-template-areas:
-    "headOne   headOne   headTwo    headTwo"
-    "stats     stats     stats      stats"
-    "def       skills    otherStats otherStats"
-    "saving    skills    profs      traits"
-    "passive   skills    profs      traits";
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 1em;
-  padding: 1em;
-  background-color: #b3b3b4;
-}
+@media (max-width: 625px) {
+  #display-wrapper {
+    grid-template-areas:
+      "headOne"
+      "headTwo"
+      "stats"
+      "stats"
+      "otherStats"
+      "def"
+      "saving"
+      "passive"
+      "skills"
+      "skills"
+      "skills"
+      "profs"
+      "traits";
+    grid-template-columns: 1fr;
+  }
+  #dispaly-section {
+    padding: 0;
+    margin: 0;
+  }
 
-#display-head-left {
-  grid-area: headOne;
-  background: url(/images/vecteezy_chinese-dragon-png-ai-generative_24500717_123.png);
-  background-size: 15em 15em;
-  background-repeat: no-repeat;
-  background-color: #ef233c;
-  background-position: 2% 50%;
-  border: #0f0f14 3px solid;
-  border-right: none;
-  border-radius: 10px 0 0 10px;
-  width: 100%;
-  margin: 0;
-  margin-left: 0.5em;
-}
+  #display-head-left {
+    background-size: 15em 15em;
+    background-position: 2% 50%;
+    border-right: #0f0f14 3px solid;
+    border-radius: 10px;
+    margin-left: 0;
+  }
 
-#logo {
-  color: #edf2f4;
-  text-align: right;
-  margin-right: 1em;
-}
+  #display-head-right {
+    border-left: #0f0f14 3px solid;
+    border-radius: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-left: 0;
+  }
 
-#display-head-right {
-  grid-area: headTwo;
-  width: 100%;
-  border: #0f0f14 3px solid;
-  border-left: none;
-  border-radius: 0 10px 10px 0;
-  display: flex;
-  background-color: #ef233c;
-  flex-wrap: wrap;
-  margin: 0;
-  margin-left: -0.5em;
-}
+  #name-input-div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-.info-box {
-  border: #0f0f14 5px solid;
-  width: 45%;
-  margin: auto;
-  padding: 0 !important;
-}
+  #name-button {
+    width: 100px;
+  }
 
-#sheet-name-div {
-  border: #0f0f14 5px solid;
-  width: 45%;
-  margin: auto 1em 1em auto;
-  padding: 0 !important;
-}
+  h1 {
+    font-size: 2.5em;
+  }
 
-.info-box > div:first-child,
-#sheet-name-div > div:first-child {
-  text-align: center;
-  border-bottom: #0f0f14 1px solid;
-  background-color: #edf2f4;
-  padding: 0.5em;
-}
+  h2 {
+    font-size: 2em;
+  }
 
-.info-box > div:nth-child(2),
-#sheet-name-div > div:nth-child(2) {
-  text-align: center;
-  padding: 0.5em;
-  border-bottom: #0f0f14 1px solid;
-  background-color: #c2c4c7;
-}
+  .modal .btn-container button {
+    width: 35%;
+    padding: 0.2em;
+  }
 
-#sheet-stats {
-  grid-area: stats;
-}
+  .roll-box button {
+    padding: 0.5em;
+    font-size: 1em;
+  }
 
-#other-stats {
-  grid-area: otherStats;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
+  .roll-box p {
+    padding: 0.2em;
+    font-size: 1em;
+  }
 
-#sheet-defense {
-  grid-area: def;
-  display: flex;
-  flex-wrap: wrap;
-}
+  .ability-btn {
+    width: 40%;
+  }
 
-#sheet-skills {
-  grid-area: skills;
-}
-
-#sheet-saving-throws {
-  grid-area: saving;
-}
-
-#passive {
-  grid-area: passive;
-}
-
-#sheet-other-profs {
-  grid-area: profs;
-}
-
-#sheet-traits {
-  grid-area: traits;
-}
-
-#passive,
-#sheet-defense,
-#sheet-skills,
-#sheet-traits,
-#sheet-other-profs,
-#sheet-saving-throws {
-  border: #0f0f14 3px solid;
-  border-radius: 10px;
-  background-color: #edf2f4;
-}
-
-#display-wrapper h3 {
-  color: #edf2f4;
-  background-color: #e70329;
-  text-align: center;
-  border-radius: 8px 8px 0 0;
-  margin: 0;
-  padding: 0.2em 0;
-  width: 100%;
-}
-
-#speed-div,
-#init-div,
-#sheet-prof-bonus-div {
-  border: #0f0f14 3px solid;
-  border-radius: 10px;
-  background-color: #ef233c;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  text-align: center;
-  height: 5em;
-  width: 30%;
-  height: 80%;
-  margin: auto;
-  align-self: auto;
-  color: #edf2f4;
-}
-
-#sheet-prof-bonus,
-#speed-mod,
-#init-mod {
-  border: #0f0f14 3px solid;
-  border-radius: 5px;
-  color: #0f0f14;
-  background-color: #edf2f4;
-  width: 55%;
-  height: 50%;
-  align-items: center;
-  margin: auto;
-  font-size: 1.2em;
-}
-
-.def-div {
-  border: #e70329 1px solid;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  width: 40%;
-  margin: 0.5em auto;
-  border-radius: 5px;
-}
-
-.def-div div:first-child {
-  font-weight: 600;
-}
-
-.def-div div:nth-child(2) {
-  border: 1px #0f0f14 solid;
-  width: 70%;
-  height: 50%;
-  margin: auto;
-  vertical-align: middle;
-}
-
-#passive > div {
-  border: #e70329 1px solid;
-  border-radius: 5px;
-  margin: 0.3em auto;
-  width: 90%;
-  display: flex;
-  justify-content: space-between;
-}
-
-#passive > div > div:nth-child(2) {
-  color: #edf2f4;
-  background-color: #ef233c;
-  border-radius: 50%;
-  width: 1em;
-  height: 1em;
-  text-align: center;
-  border: #0f0f14 1px solid;
-}
-
-.scroll-box {
-  overflow-y: scroll;
-  overflow-x: hidden;
-  height: 70%;
-  width: 90%;
-  margin: auto;
-}
-
-#sheet-traits p,
-#sheet-other-profs p {
-  margin: 1em;
-}
-
-.section-div {
-  min-height: 100vh;
+  .proficiency-btn {
+    width: 45%;
+    font-size: 1em;
+  }
 }
